add radius font

--- a/warped_shadow.html
+++ b/warped_shadow.html
@@ -2,6 +2,8 @@
   <head>
     <title>Warped shadow</title>
 
+    <link rel="stylesheet" type="text/css" href="megan/radius_font.css" />
+
     <style>
       body {
           padding: 0;
@@ -650,7 +652,9 @@ h2{
   <body>
 
       <header>
-        <h1><a href="/" title="Home">justin too</a></h1>
+        <h1>
+          <a href="/" title="Home">justin too</a>
+        </h1>
         <nav>
           <ul>
             <li class="thoughts"><a href="/thoughts"><span>Blog</span></a></li>
@@ -723,6 +727,19 @@ h2{
           <span class="warp"></span>
       </article>
 </div>
+
+  <div class="letterContainer">
+    <div class="letterTTop"></div>
+    <div class="letterTBottom"></div>
+  </div>
+
+  <div class="letterContainer">
+    <div class="letterO"></div>
+  </div>
+
+  <div class="letterContainer">
+    <div class="letterO"></div>
+  </div>
 
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
    <script>
