--- a/warped_shadow.html
+++ b/warped_shadow.html
@@ -646,7 +646,7 @@ h2{
 
       <header>
         <h1>
-          <a href="/" title="Home">justin too</a>
+          <a href="/" title="Home">justin too <font color="#cfc">| </a> <font size="5px">why walk when you can run?</font></font>
         </h1>
         <nav>
           <ul>
